[package]
name = "kai"
version = "0.1.0"
authors = ["Kai Schmidt <kaikaliischmidt@gmail.com>"]
edition = "2018"
description = "My personal prelude and utilities"
categories = []
keywords = ["utilities", "utility", "prelude"]
license = "MIT"
readme = "readme.md"
documentation = "docs.rs/kai"
repository = "github.com/kaikalii/kai"

[dependencies]
